--- a/css/style.css
+++ b/css/style.css
@@ -5,7 +5,7 @@
 }
 
 section{
-    background-color: rgb(255, 5, 5);
+    background-color: rgba(255, 242, 0, 0.854);
     height: 100vh;  
     position: relative; 
 }
@@ -15,18 +15,19 @@ section{
     left: 50%;
     top: 50%;
     transform: translate(-50%, -50%);
+
 }
 header{
 height: 90px;
-background: rgb(255, 5, 5);
+background: rgb(255, 0, 0);
 display: flex;
 justify-content: flex-end;
 padding-top: 1rem;
 padding-right: 4rem;
-position: fixed;
+
 width: 100%;
 }
-}
+
 
 main{
     height: calc(100% - 50px);
@@ -34,16 +35,18 @@ main{
 
 .red{
     background: red;
+    color:yellow;
     
 }
 
-ì
 .yellow{
     background-color: yellow;
+    color: green;
 }
 
 .green{
     background-color: green;
+    color: yellow;
 }
 
 .button{
@@ -59,10 +62,10 @@ background-color: white;
     justify-self: center;
     align-items: center;
 }
+
 h1{
     text-align: center;
-    font-size: 40px;
-    font-family: sans-serif;
-    
+    font-size: 50px;
+    font-family: sans-serif; 
 }
 
